@@ -54,11 +54,50 @@ EAPI int evil_fclose_native(FILE *stream);
 
 #endif /* _WIN32_WCE */
 
-#ifdef _WIN32
-
+/**
+ * @brief Print allocated string using a va_list.
+ *
+ * @param strp The returned pointer of the allocated string.
+ * @param fmt The format string.
+ * @param ap The variable argument list.
+ * @return -1 on failure, the length of the printed string.
+ *
+ * This function allocates a buffer large enough to hold the output
+ * including the terminating null byte, and return a pointer to it
+ * into @p strp. The format @p fmt is the same than the one used with
+ * printf(). When not needed anymore, the pointer returned in @p strp
+ * must be freed. On error (memory allocation failure or other error),
+ * this function returns -1 and the content of @p strp is undefined,
+ * otherwise it returns the length of the string (not including the
+ * terminating null byte).
+ *
+ * Conformity: GNU extension.
+ *
+ * Supported OS: Windows XP, CE.
+ */
 EAPI int vasprintf(char **strp, const char *fmt, va_list ap);
 
-#endif /* _WIN32 */
+/**
+ * @brief Print allocated string using a variable number of arguments.
+ *
+ * @param strp The returned pointer of the allocated string.
+ * @param fmt The format string.
+ * @return -1 on failure, the length of the printed string.
+ *
+ * This function allocates a buffer large enough to hold the output
+ * including the terminating null byte, and return a pointer to it
+ * into @p strp. The format @p fmt is the same than the one used with
+ * printf(). When not needed anymore, the pointer returned in @p strp
+ * must be freed. On error (memory allocation failure or other error),
+ * this function returns -1 and the content of @p strp is undefined,
+ * otherwise it returns the length of the string (not including the
+ * terminating null byte).
+ *
+ * Conformity: GNU extension.
+ *
+ * Supported OS: Windows XP, CE.
+ */
+EAPI int asprintf(char **strp, const char *fmt, ...);
 
 
 /**
